# ARMinor-2020-Opensource-Virtual-Learning-Environment-AROVLE

./: README.md
Tutorial_Files/Cartesian_path_planning_and_execution/example_control/: CMakeLists.txt  package.xml
Tutorial_Files/Cartesian_path_planning_and_execution/example_control/config/: config.yaml
Tutorial_Files/Cartesian_path_planning_and_execution/example_urdf/launch/: gazebo.launch  teb.launch
Tutorial_Files/Cartesian_path_planning_and_execution/example_urdf/meshes/: armLink3.STL  base_link.STL
Tutorial_Files/Cartesian_path_planning_and_execution/example_urdf/urdf/: example.gazebo.xacro
Tutorial_Files/Cartesian_path_planning_and_execution/mov/: CMakeLists.txt  package.xml
Tutorial_Files/Cartesian_path_planning_and_execution/mov/launch/: move.launch
Tutorial_Files/Cartesian_path_planning_and_execution/mov/src/: circular Path.cpp  move.cpp  points.json
Tutorial_Files/Cartesian_path_planning_and_execution/robot_moveit/: .setup_assistant  package.xml
Tutorial_Files/Cartesian_path_planning_and_execution/robot_moveit/config/: example_urdf.srdf  fake_controllers.yaml  ros_controllers.yaml
Tutorial_Files/Cartesian_path_planning_and_execution/robot_moveit/launch/: demo.launch  example_moveit.launch  moveit_rviz.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
Tutorial_Files/Heterogeneous_robot/example_urdf/: package.xml
Tutorial_Files/Heterogeneous_robot/example_urdf/launch/: gazebo.launch
Tutorial_Files/Heterogeneous_robot/example_urdf/meshes/: armLink0.STL  armLink2.STL  wheelBackLeft.STL  wheelFrontRight.STL
Tutorial_Files/Heterogeneous_robot/example_urdf/urdf/: example.gazebo.xacro
Tutorial_Files/Manipulator_control_using_moveit/example_control/: CMakeLists.txt  package.xml
Tutorial_Files/Manipulator_control_using_moveit/example_urdf/: package.xml
Tutorial_Files/Manipulator_control_using_moveit/example_urdf/launch/: rviz.launch
Tutorial_Files/Mapping/example_urdf/: CMakeLists.txt  package.xml
Tutorial_Files/Mapping/example_urdf/launch/: display.launch  (+2 more)
Tutorial_Files/Matlab_ROS_integration/jsp/: CMakeLists.txt  package.xml
Tutorial_Files/Matlab_ROS_integration/my_robot_description/: CMakeLists.txt  package.xml  pub.py
Tutorial_Files/Matlab_ROS_integration/my_robot_description/launch/: rviz.launch  spawn.launch
Tutorial_Files/Matlab_ROS_integration/my_robot_description/rviz/: robotmodel.rviz
Tutorial_Files/Matlab_ROS_integration/my_robot_description/urdf/: robot.urdf
Tutorial_Files/Modeling_a_simple_robot/robot_description/: CMakeLists.txt  package.xml
Tutorial_Files/Modeling_a_simple_robot/robot_description/launch/: robot.launch
Tutorial_Files/Modeling_a_simple_robot/robot_description/urdf/: robot_description_urdf.urdf
Tutorial_Files/Navigation/example_urdf/: package.xml
Tutorial_Files/ROS_control/example_control/: package.xml
Tutorial_Files/ROS_control/example_urdf/: package.xml
(+50 files in other folders)
