<?xml version="1.0"?>
<package format="2">
  <name>example_control</name>
  <version>0.0.0</version>
  <description>The example_control package</description>

  <maintainer email="fontysrobotics@fontys.nl">fontysrobotics</maintainer>

  <license>BSD</license>

  <author email="hussamkhayoub@gmail.com">Hussam Ayoub</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
