<?xml version="1.0"?>
<package format="2">
  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>The my_robot_description package</description>

  <maintainer email="fontysrobotics@fontys.nl">fontys_robotics</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <export>
  </export>
</package>
