<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>urdf file and launch file of a simple 2 link robot</description>
  <maintainer email="fontysrobotics@fontys.nl">fontys_robotics</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
